<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            app:navigationIcon="@drawable/ic_baseline_info_24"
            android:id="@+id/toolbarOnYTD"
            app:menu="@menu/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


        <TextView
            android:id="@+id/pageTitleOnPageGenerator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"

            android:fontFamily="@font/carter_one"
            android:text="@string/youtube_thumbnail_downloader"
            android:textAlignment="center"
            android:textColor="#FF7700"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:labelFor="@+id/urlInputOnTD"
            android:text="@string/enter_video_url"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/urlInputOnTD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/round_bg"
            android:backgroundTint="@color/edit_text_background"
            android:elevation="6dp"
            android:ems="10"
            android:inputType="textUri"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/black_white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonOnTD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/round_bg"
            android:backgroundTint="@color/pink_green"
            android:text="@string/get_thumbnail"
            android:textColor="@color/white_black" />

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/imageContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <TextView
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="@font/carter_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/max_resolution_1080p" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp">

            <ImageView
                android:id="@+id/thumbImage1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/loading" />

            <Button
                android:id="@+id/downloadThumb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:backgroundTint="#45FB5C"
                android:drawableStart="@drawable/ic_baseline_cloud_download_24"
                android:drawablePadding="10dp"
                android:text="@string/download" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="@font/carter_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="HD (720p)" />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp">

            <ImageView
                android:id="@+id/thumbImage2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/loading" />

            <Button
                android:id="@+id/downloadThumb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:backgroundTint="@color/pink_green"
                android:drawableStart="@drawable/ic_baseline_cloud_download_24"
                android:drawablePadding="10dp"
                android:text="Download" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="@font/carter_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/standard_quality_480p" />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp">

            <ImageView
                android:id="@+id/thumbImage3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/loading" />

            <Button
                android:id="@+id/downloadThumb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:backgroundTint="@color/pink_green"
                android:drawableStart="@drawable/ic_baseline_cloud_download_24"
                android:drawablePadding="10dp"
                android:text="@string/download" />
        </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</ScrollView>